fixed link alignment on navbar; Misc other adjustments for mobile view

--- a/src/components/about/ourStory.css
+++ b/src/components/about/ourStory.css
@@ -30,6 +30,8 @@ h4 {
 
   .ourStory {
     width: 100%;
+    height: 100%;
+    padding: 0px;
   }
 }
 
