--- a/src/components/courses/courses.css
+++ b/src/components/courses/courses.css
@@ -10,6 +10,7 @@
   background-repeat: no-repeat;
   background-size: 100%;
   margin: 10px;
+  margin-bottom: 0px;
   border-radius: 8px;
   padding: 40px;
   overflow: scroll;
