--- a/src/components/navBar/navBarLink.css
+++ b/src/components/navBar/navBarLink.css
@@ -15,25 +15,22 @@
 
 
 
-
 @media only screen and (max-width: 600px) {
  
   .navLink {
     color: rgb(90, 30, 35);
-    
-    border-radius: 12px;
+    border-radius: 5px;
     box-shadow: 0 0 15px silver;
     padding: 4px;
     margin: 14px;
     transition-duration: 500ms;             
     cursor: pointer;
-    text-decoration: underline;
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 2em;
-    text-decoration: none;
+   
   }
 
   .navLink:hover {
